--- a/mobile/presentation/src/main/res/layout/fragment_home.xml
+++ b/mobile/presentation/src/main/res/layout/fragment_home.xml
@@ -27,7 +27,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="2dp"
         android:layout_marginBottom="2dp"
         android:visibility="visible"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -35,10 +35,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_my_reports"
+        app:layout_constraintTop_toBottomOf="@+id/view_title"
         app:layout_constraintVertical_bias="1.0"
         tools:itemCount="100"
         tools:listitem="@layout/item_report" />
+
+    <View
+        android:id="@+id/view_title"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="4dp"
+        android:background="@color/grey_date"
+        android:elevation="2dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_my_reports" />
 
     <TextView
         android:id="@+id/tv_empty_rv"
@@ -89,13 +100,13 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginHorizontal="20dp"
+        android:contentDescription="@string/arrow_for_create_first_report"
         android:src="@drawable/arrow_down"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/btn_create_report"
         app:layout_constraintEnd_toEndOf="@+id/tv_empty_rv"
         app:layout_constraintStart_toStartOf="@+id/tv_empty_rv"
-        app:layout_constraintTop_toTopOf="@+id/tv_empty_rv"
-        android:contentDescription="@string/arrow_for_create_first_report" />
+        app:layout_constraintTop_toTopOf="@+id/tv_empty_rv" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
