--- a/mobile/presentation/src/main/res/layout/fragment_send_photos.xml
+++ b/mobile/presentation/src/main/res/layout/fragment_send_photos.xml
@@ -66,8 +66,8 @@
         android:id="@+id/iv_back_part"
         android:layout_width="0dp"
         android:layout_height="120dp"
-        android:layout_marginTop="8dp"
         android:layout_marginHorizontal="4dp"
+        android:layout_marginTop="8dp"
         android:contentDescription="@string/back_part_of_car"
         android:src="@drawable/back_parts_car"
         app:layout_constraintEnd_toStartOf="@+id/view_horizontal"
@@ -93,11 +93,11 @@
         android:id="@+id/iv_right_part"
         android:layout_width="0dp"
         android:layout_height="120dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="4dp"
-        android:layout_marginStart="4dp"
         android:contentDescription="@string/right_part_of_car"
-        android:src="@drawable/right_left_parts_car"
+        android:src="@drawable/right_part_car"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/view_horizontal"
@@ -124,11 +124,11 @@
         android:id="@+id/iv_front_part"
         android:layout_width="0dp"
         android:layout_height="120dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="4dp"
-        android:layout_marginStart="4dp"
         android:contentDescription="@string/front_part_of_car"
-        android:rotationY="-180"
+
         android:src="@drawable/front_parts_car"
         app:layout_constraintEnd_toStartOf="@+id/view_horizontal"
         app:layout_constraintHorizontal_bias="0.0"
@@ -170,13 +170,13 @@
         android:id="@+id/iv_left_part"
         android:layout_width="0dp"
         android:layout_height="120dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="4dp"
-        android:layout_marginStart="4dp"
         android:contentDescription="@string/left_part_of_car"
-        android:rotationY="-180"
-        android:src="@drawable/right_left_parts_car"
+        android:src="@drawable/left_par_car"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/view_horizontal"
         app:layout_constraintTop_toBottomOf="@+id/tv_front_part" />
 
@@ -213,12 +213,12 @@
         android:layout_marginHorizontal="24dp"
         android:layout_marginBottom="24dp"
         android:backgroundTint="@color/main"
+        android:enabled="false"
         android:fontFamily="@font/mulish"
         android:paddingVertical="12dp"
-        android:textColor="@color/white"
         android:text="@string/Send"
         android:textAllCaps="false"
-        android:enabled="false"
+        android:textColor="@color/white"
         android:textSize="18sp"
         app:cornerRadius="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
